apps/actual-budget/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: actual-budget
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: actualbudget/actual-server:latest-alpine
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5006
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-budget-data
