apps/actual-budget/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: actual-budget
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: actual-budget
  ports:
    - name: http
      port: 5006
      targetPort: http
